[gd_scene load_steps=34 format=2]

[ext_resource path="res://platformerArt_v4/png/key_yellow.png" type="Texture" id=1]
[ext_resource path="res://platformerArt_v4/png/character/walk/walk0008.png" type="Texture" id=2]
[ext_resource path="res://platformerArt_v4/png/character/walk/walk0006.png" type="Texture" id=3]
[ext_resource path="res://platformerArt_v4/png/character/walk/walk0007.png" type="Texture" id=4]
[ext_resource path="res://platformerArt_v4/png/character/walk/walk0011.png" type="Texture" id=5]
[ext_resource path="res://platformerArt_v4/png/character/walk/walk0009.png" type="Texture" id=6]
[ext_resource path="res://platformerArt_v4/png/character/walk/walk0001.png" type="Texture" id=7]
[ext_resource path="res://platformerArt_v4/png/character/walk/walk0002.png" type="Texture" id=8]
[ext_resource path="res://platformerArt_v4/png/character/front.png" type="Texture" id=9]
[ext_resource path="res://platformerArt_v4/png/character/walk/walk0005.png" type="Texture" id=10]
[ext_resource path="res://platformerArt_v4/png/character/walk/walk0004.png" type="Texture" id=11]
[ext_resource path="res://platformerArt_v4/png/character/walk/walk0003.png" type="Texture" id=12]
[ext_resource path="res://Assets/Luz.png" type="Texture" id=13]
[ext_resource path="res://platformerArt_v4/png/character/walk/walk0010.png" type="Texture" id=14]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=15]
[ext_resource path="res://Sounds/Player/footstep04.ogg" type="AudioStream" id=16]
[ext_resource path="res://platformerArt_v4/png/coin_gold.png" type="Texture" id=17]
[ext_resource path="res://Assets/Quikhand.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://Sounds/Player/jumping.wav" type="AudioStream" id=19]
[ext_resource path="res://Sounds/Player/coin.wav" type="AudioStream" id=20]
[ext_resource path="res://Sounds/Player/key-pickup.wav" type="AudioStream" id=21]
[ext_resource path="res://Sounds/Player/door-open.wav" type="AudioStream" id=22]

[sub_resource type="GDScript" id=1]
script/source = "extends KinematicBody2D



# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"
var speed = 500
var jump = 800
var gravup = 40
var grav = 80
var vsp = 0
var go = Vector2(0,0)
var suelo = false
var moaL = true
var moaR = true
var sliding = false
var hasKey = false
var pausa = false
var coins = 0
var push = false
var walking = false

# Called when the node enters the scene tree for the first time.
func _ready():
	set_process(true)
	set_process_input(true)
	
func get_input(delta):
	if vsp < jump && !suelo && !sliding:
		if go.y < 200:
			vsp += gravup
		else:
			vsp += grav
	elif sliding && !suelo:
		vsp = 100
	sliding = false
	if checkCeiling() && vsp < 0:
		vsp = 0
	if Input.is_action_pressed(\"left\"):
		walking = false
		if !moaL:
			go.x -= speed/15
		else:
			go.x = -speed
		if nexttoWallL():
			sliding = true
			$AnimatedSprite.play(\"slide\")
		elif nexttoWallR():
			sliding = false
		else:
			$AnimatedSprite.play(\"walk\")
			walking = true
		$AnimatedSprite.flip_h = true
	elif Input.is_action_pressed(\"right\"):
		walking = false
		if !moaR:
			go.x += speed/15
		else:
			go.x = speed
		if nexttoWallR():
			sliding = true
			$AnimatedSprite.play(\"slide\")
		elif nexttoWallL():
			sliding = false
		else:
			$AnimatedSprite.play(\"walk\")
			walking = true
		$AnimatedSprite.flip_h = false
	else:
		$AnimatedSprite.play(\"idle\")
		walking = false
		if is_on_floor():
			go.x = 0
		else:
			if go.x > 0:
				go.x -= 30
			elif go.x < 0:
				go.x += 30
	if Input.is_action_pressed(\"up\") && (suelo || nexttoWall()) && !$Ceiling.is_colliding():
		$JumpSound.play()
		vsp = -jump
		if !suelo && nexttoWallL():
			go.x = 600
			moaL = false
			moaR = true
			sliding = false
		if !suelo && nexttoWallR():
			go.x = -600
			moaR = false
			moaL = true
			sliding = false
		suelo = false
	go.y = vsp
	if walking && $Floor.is_colliding():
		if $Timer.time_left <= 0:
			$AudioStreamPlayer2D.pitch_scale = rand_range(0.8, 1.2)
			$AudioStreamPlayer2D.play()
			$Timer.start(.2)
	else:
		$AudioStreamPlayer2D.stop()

func _physics_process(delta):
	var time = get_parent().get_node(\"../../GM\").getTime()
	if !pausa:
		if !checkSpike():
			get_input(delta)
			if push:
				$JumpSound.play()
				vsp = -jump
				go.y = vsp
				push = false
			go = move_and_slide(go, Vector2.UP)
			if $WallRight.is_colliding():
				if $WallRight.get_collider().name == \"Barrier\" && hasKey:
					$DoorSound.play()
					$WallRight.get_collider().get_node(\"CollisionShape2D\").disabled = true
					$WallRight.get_collider().get_parent().visible = false
		else:
			pausa = true
			$AudioStreamPlayer2D.stop()
			get_parent().get_node(\"../../GM\").stop = true
			get_parent().get_node(\"Camera2D\").restart(time)
			$AnimatedSprite.play(\"idle\")
		if is_on_floor():
			vsp = 0
			suelo = true
			moaL = true
			moaR = true
			sliding = false
		else:
			suelo = false
		get_parent().get_node(\"Camera2D\").updateCamera(global_position, time)
		if time >= 0.45 && time < 0.78:
			get_node(\"Light2D\").visible = true
			get_node(\"Light2D2\").visible = true
		elif time >= 0.79:
			get_node(\"Light2D\").visible = false
			get_node(\"Light2D2\").visible = false
	elif Input.is_action_pressed(\"reset\"):
		global_position = get_parent().get_node(\"../StartPoint\").global_position
		get_parent().get_node(\"../../GM\").stop = false
		get_parent().get_node(\"Camera2D\").restart(time)
		pausa = false
		

func nexttoWall():
	return nexttoWallL() || nexttoWallR()

func nexttoWallL():
	return $WallLeft.is_colliding()

func nexttoWallR():
	return $WallRight.is_colliding()

func checkCeiling():
	return $Ceiling.is_colliding()

func checkSpike():
	var res = false
	if $Floor.get_collider() != null:
		res = $Floor.get_collider().name == \"Spike\"
	if nexttoWallL():
		res = ($WallLeft.get_collider().name == \"Slime\")
	if nexttoWallR() && !res:
		res = ($WallRight.get_collider().name == \"Slime\")
	return res

func _on_Key_body_entered(body):
	if body.name == \"Player\":
		hasKey = true
		$KeySound.play()
		get_parent().get_node(\"Camera2D\").get_node(\"Keys\").text = \"1\"
		get_parent().get_node(\"Camera2D\").get_node(\"Keys2\").text = \"1\"

func getPause():
	return pausa

func pushUp():
	push = true

func _on_Coin_body_entered(body):
	if body.name == \"Player\":
		$CoinSound.play()
		coins += 1
		get_parent().get_node(\"Camera2D\").get_node(\"Coins\").text = str(coins)
		get_parent().get_node(\"Camera2D\").get_node(\"Coins2\").text = str(coins)
"

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 22.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 33.5, 46.25 )

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="DynamicFont" id=5]
size = 150
font_data = ExtResource( 18 )

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=7]
blend_mode = 1

[sub_resource type="DynamicFont" id=8]
size = 36
font_data = ExtResource( 18 )

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=10]
blend_mode = 1

[sub_resource type="DynamicFont" id=11]
size = 42
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 18 )

[node name="Player" type="Node"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 51, 368 )
collision_layer = 2
script = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 2 )
animation = "slide"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 3 )

[node name="WallRight" type="RayCast2D" parent="Player"]
position = Vector2( 35, -46.834 )
scale = Vector2( 1, 1.8 )
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 5

[node name="Ceiling" type="RayCast2D" parent="Player"]
position = Vector2( 34, -47 )
rotation = 1.5708
scale = Vector2( 1, 1.6 )
enabled = true
cast_to = Vector2( 0, 35 )

[node name="Floor" type="RayCast2D" parent="Player"]
position = Vector2( 34, 47 )
rotation = 1.5708
scale = Vector2( 1, 1.6 )
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 3

[node name="WallLeft" type="RayCast2D" parent="Player"]
position = Vector2( -35, -46.834 )
scale = Vector2( 1, 1.8 )
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 5

[node name="Light2D" type="Light2D" parent="Player"]
visible = false
position = Vector2( 0, -5 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 13 )
texture_scale = 3.23
energy = 0.6
mode = 2
shadow_enabled = true

[node name="Light2D2" type="Light2D" parent="Player"]
visible = false
position = Vector2( 0, -5 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 13 )
texture_scale = 3.23
energy = 0.8

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 16 )
volume_db = -30.0

[node name="Timer" type="Timer" parent="Player"]
one_shot = true

[node name="JumpSound" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 19 )
volume_db = -40.0
pitch_scale = 0.9

[node name="CoinSound" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 20 )
volume_db = -20.0

[node name="KeySound" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 21 )
volume_db = -20.0

[node name="DoorSound" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 22 )
volume_db = -10.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 49.8154, 215.32 )
current = true
script = ExtResource( 15 )

[node name="Label" type="Label" parent="Camera2D"]
visible = false
material = SubResource( 4 )
margin_left = -531.815
margin_top = -177.32
margin_right = 535.185
margin_bottom = 45.68
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Press R to reset"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Camera2D"]
visible = false
margin_left = -531.815
margin_top = -177.32
margin_right = 535.185
margin_bottom = 45.68
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press R to reset"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="Camera2D"]
visible = false
material = SubResource( 6 )
position = Vector2( 440, -270 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Camera2D"]
position = Vector2( 440, -270 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Keys2" type="Label" parent="Camera2D"]
visible = false
material = SubResource( 7 )
margin_left = 469.185
margin_top = -290.0
margin_right = 509.185
margin_bottom = -249.0
custom_fonts/font = SubResource( 8 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" type="Label" parent="Camera2D"]
margin_left = 469.185
margin_top = -290.0
margin_right = 509.185
margin_bottom = -249.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Label" parent="Camera2D"]
visible = false
material = SubResource( 7 )
margin_top = -290.0
margin_right = 40.0
margin_bottom = -249.0
custom_fonts/font = SubResource( 8 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins2" type="Label" parent="Camera2D"]
margin_top = -290.0
margin_right = 40.0
margin_bottom = -249.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3" type="Sprite" parent="Camera2D"]
position = Vector2( -25, -270 )
texture = ExtResource( 17 )

[node name="Sprite4" type="Sprite" parent="Camera2D"]
visible = false
material = SubResource( 9 )
position = Vector2( -25, -270 )
texture = ExtResource( 17 )

[node name="Clock2" type="Label" parent="Camera2D"]
visible = false
material = SubResource( 10 )
margin_left = -480.0
margin_top = -295.0
margin_right = -440.0
margin_bottom = -247.0
custom_fonts/font = SubResource( 11 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clock" type="Label" parent="Camera2D"]
margin_left = -480.0
margin_top = -295.0
margin_right = -370.0
margin_bottom = -247.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "00000"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
